# dialpad-contact-uploader

./: LICENSE  README.md  console.py  dialpad_uploader.py  pyproject.toml
dialpad_contact_uploader/: __init__.py  contacts.py  spreadsheet.py  validate.py
