[tool.poetry]
name = "dialpad-contact-uploader"
version = "0.1.0"
description = "A company contact uploader/maintainer for Dialpad"
authors = ["Daniel Brotsky <dev@brotsky.com>"]
readme = "README.md"
packages = [{include = "dialpad_contact_uploader"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
email-validator = "^1.2.1"
click = "^8.1.3"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
